css/custom.css
/* common required style */
.text-center {
	text-align: center !important;
}
.no-padding {
	padding: 0 !important;
}
.list-inline > li {
	display: inline-block;
}
.with-border-bottom {
	border-bottom: 1px dashed #999 !important;
}
.text-muted {
	color: #888 !important;
}
/* common required style */



.main-body {
	padding-top: 50px !important;
}
.profile-title {
	display: block;
	padding: 10px 0;
}
.profile-photo {
	display: block;
}
.profile-photo img {
	width: 100%;
}
.profile-name {
	text-transform: uppercase;
	font-size: 20px;
	font-weight: 600;
	margin: 0;
}
.profile-designation {
	margin: 0;
	font-weight: 300;
}
.social-links {
	display: block;
	border-top: 1px dashed #999;
}
.social-links ul {
	margin: 0;
}
.social-links ul > li {
	text-align: center;
	margin: 0;
	float: left;
	padding-top: 10px;
	padding-bottom: 10px;
	min-width: 20%;
	transition: all ease-in-out 0.75s;
	-webkit-transition: all ease-in-out 0.75s;
	-moz-transition: all ease-in-out 0.75s;
	-o-transition: all ease-in-out 0.75s;
}
.social-links ul > li:hover {
	background: #333 !important;
	color: #FFF !important;
	cursor: pointer;
}
.social-links ul > li a {
	font-size: 20px;
	color: inherit;
}
.right-sidebar {
	padding-left: 30px !important;
}
.tab-content {
	padding-top: 30px !important;
}
.tab-content h5 {
	font-weight: 600;
}
.tab-header {
	font-weight: 300;
}
.tab-content-header .row {
	margin-bottom: 0 !important;
}

.tab-header::before,
.tab-header::after {
	content: " ";
	display: inline-block;
	width: 80px;
	height: 1px;
	background: #999;
	margin: 10px 20px;
}
.tab-content .section {
	padding: 20px !important;
}

.progressbar {
	position: relative;
}

.status-icons{
	font-size: 24px;
	font-weight: 900;
}
.span3 {
	width: 30%;
	float: left;
	margin: 10px;
}
.thumbnail img {
	width: 100%;
}

.btn-filter {
	background: transparent;
	border: 1px solid #333;
}
.btn-filter:hover,
.btn-filter:active,
.btn-filter:focus {
	background: #333;
	color: #FFF;
}

.card-image.hovereffect {
	float: none;
	text-align: left;
}
.posted-date {
	position: absolute;
	top: 0;
	bottom: auto;
	right: auto;
	left: 0;
	background: #333;
	color: #FAFAFA;
	padding: 0px 15px;
}

#map {
  height: 300px !important;
  margin-top: 20px;
}
.contact-title {
	font-size: 18pt;
}
.info-list li {
	padding: 0 0 10px 0;
	font-weight: 400;
}
.info-list span {
	color: #666;
	font-weight: 300;
}
.footer .row {
	padding-top: 20px;
}
.footer span {
	color: #666;
}

.tabs .tab a {
	color: #333;
}
.tabs .tab a:hover,
.tabs .tab a:active,
.tabs .tab a:focus {
	color: #888;
}
.tabs .indicator {
	background: #333;
	height: 5px;
}
.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
	color: #333;
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
	color: #888;
}
.input-field .prefix.active {
  color: #333 !important;
}

input:not([type]):focus:not([readonly]),
input[type=text]:focus:not([readonly]),
input[type=password]:focus:not([readonly]),
input[type=email]:focus:not([readonly]),
input[type=url]:focus:not([readonly]),
input[type=time]:focus:not([readonly]),
input[type=date]:focus:not([readonly]),
input[type=datetime]:focus:not([readonly]),
input[type=datetime-local]:focus:not([readonly]),
input[type=tel]:focus:not([readonly]),
input[type=number]:focus:not([readonly]),
input[type=search]:focus:not([readonly]),
textarea.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #333;
  box-shadow: 0 1px 0 0 #333;
}
.input-field label.active {
  color: #333 !important;
}
.btn-theme {
	background: #333;
}
.btn-theme:hover {
	background: #666;
}

